Stub command execution

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>CYOA</title>
 <link rel="stylesheet" href="plain.css">
 <article></article>
-<b></b><input>
+<b><input></b>
 <div></div>
 <script src="jquery-1.7.1.min.js"></script>
 <script src="client.js"></script>
