--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 <article></article>
 <b><span><ol></ol><input maxlength="140"></span></b>
 <script src="jquery-1.7.1.min.js"></script>
+<script src="socket.io/socket.io.js"></script>
 <script src="input.js"></script>
 <script src="client.js"></script>
